# Projects

fireworks/: CMakeLists.txt
fireworks/assets/shaders/: points.vert  shader.frag  shader.vert
fireworks/emcc_build/: App.data  App.html  App.js  App.wasm  Makefile  mylib.js
fireworks/emcc_build/assets/shaders/: points.frag
fireworks/include/glad/: glad.h
fireworks/src/: firework.c  firework.h  glad.c  glutil.c  glutil.h  lmath.c  lmath.h  ltrans.c  ltrans.h  main.c  timedata.c  timedata.h
gameoflife/: gol.js  hashes.js  index.html
